Fixed main class

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
               <goal>repackage</goal>
             </goals>
             <configuration>
-              <mainClass>org.folio.rest.SpringOkapiModule</mainClass>
+              <mainClass>org.folio.rest.ModDataExtractor</mainClass>
             </configuration>
           </execution>
         </executions>
