--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,6 @@
       <name>FOLIO Maven repository</name>
       <url>https://repository.folio.org/repository/maven-folio</url>
     </repository>
-    <repository>
-      <id>tamu-releases</id>
-      <url>https://maven.library.tamu.edu/content/repositories/releases</url>
-    </repository>
-    <repository>
-      <id>tamu-snapshots</id>
-      <url>https://maven.library.tamu.edu/content/repositories/snapshots</url>
-    </repository>
   </repositories>
 
   <parent>
@@ -138,7 +130,7 @@
 
     <dependency>
       <groupId>org.folio</groupId>
-      <artifactId>tenant</artifactId>
+      <artifactId>spring-tenant</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
 
