--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
               <goal>java</goal>
             </goals>
             <configuration>
-              <mainClass>org.folio.rest.domain.generator.EntityJsonSchemaGenerator</mainClass>
+              <mainClass>org.folio.spring.domain.generator.EntityJsonSchemaGenerator</mainClass>
             </configuration>
           </execution>
         </executions>
