--- a/pom.xml
+++ b/pom.xml
@@ -151,9 +151,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.oracle</groupId>
+      <groupId>com.oracle.ojdbc</groupId>
       <artifactId>ojdbc8</artifactId>
-      <version>12.2.0.1</version>
+      <version>19.3.0.0</version>
     </dependency>
 
   </dependencies>
