--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,15 +62,15 @@ extraction:
   datasource:
     #url: jdbc:oracle:thin:@[hostname]:1521:[dbname]
     url: jdbc:oracle:thin:@surprise.tamu.edu:1521:VGER
-    username: 
-    password: 
+    username:
+    password:
     # platform:
     driverClassName: oracle.jdbc.OracleDriver
     validation-query: select version();
   jpa:
     hibernate:
       ddl-auto: none
-    database-platform: org.hibernate.dialect.Oracle10gDialect
+    database-platform: org.hibernate.dialect.Oracle8iDialect
   schema:
     voyager:
       # tableTypes: TABLE,VIEW
@@ -81,12 +81,12 @@ extraction2:
   datasource:
     url: jdbc:oracle:thin:@ora-shared.it.tamu.edu:1521:cis
     # url: jdbc:oracle:thin:@surprise.tamu.edu:1521:VGER
-    username: 
-    password: 
+    username:
+    password:
     # platform:
     driverClassName: oracle.jdbc.OracleDriver
     validation-query: select version();
   jpa:
     hibernate:
       ddl-auto: none
-    database-platform: org.hibernate.dialect.Oracle10gDialect
+    database-platform: org.hibernate.dialect.Oracle8iDialect
