--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
     add-properties: false
     restart:
       enabled: true
-      exclude: target  
+      exclude: target
   h2:
     console: 
       enabled: true
@@ -70,7 +70,7 @@ extraction:
   jpa:
     hibernate:
       ddl-auto: none
-    database-platform: org.hibernate.dialect.OracleDialect
+    database-platform: org.hibernate.dialect.Oracle8iDialect
   schema:
     voyager:
       # tableTypes: TABLE,VIEW
@@ -89,4 +89,4 @@ extraction2:
   jpa:
     hibernate:
       ddl-auto: none
-    database-platform: org.hibernate.dialect.OracleDialect
+    database-platform: org.hibernate.dialect.Oracle8iDialect
