--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,9 @@ logging:
 
 server:
   port: 9002
+  tomcat:
+    # 10 hour timeout
+    connection-timeout: 36000000
 
 spring:
   data.rest:
@@ -23,7 +26,7 @@ spring:
     # platform: postgres
     # driverClassName: org.postgresql.Driver
     # url: jdbc:postgresql://localhost:5432/mod-data-extractor
-    
+
     username: folio
     password: folio
   devtools:
