--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,8 +80,8 @@ extraction:
       selection: evans:AMDB,evans:MSDB
 extraction2:
   datasource:
+    #url: jdbc:oracle:thin:@[hostname]:1521:[dbname]
     url: jdbc:oracle:thin:@ora-shared.it.tamu.edu:1521:cis
-    # url: jdbc:oracle:thin:@surprise.tamu.edu:1521:VGER
     username:
     password:
     # platform:
