--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,6 +45,9 @@ spring:
     hibernate.ddl-auto: none
     open-in-view: true
     show-sql: false
+  mvc:
+    async:
+      request-timeout: 172800000
   profiles:
     active: default
   thymeleaf:
